Fix calendar layout issues - inconsistent cell sizes

--- a/app/assets/stylesheets/design/_calendar.scss
+++ b/app/assets/stylesheets/design/_calendar.scss
@@ -62,8 +62,9 @@
   td a {
     display: block;
     font-weight: 700;
-    height: 24px;
-    width: 24px;
+    min-height: 24px;
+    min-width: 24px;
+    padding-top: 2px;
 
     &:visited { color: inherit; }
   }
@@ -135,10 +136,13 @@
     height: 100%;
     width: 100%;
 
-    td.published, td.current-issue {background: $color-enhanced-light !important;}
+    td.published, td.current-issue {
+      background: $color-enhanced-light !important;
+    }
 
     td a {
-      line-height: 0px;
+      height: 100%;
+      padding-top: 16px;
     }
 
   }
